# apolobot

./: Cargo.toml  README.md
akashi-api/: Cargo.toml  README.md
akashi-api/src/: main.rs
akashi-api/src/routes/: caption.rs  convert.rs  exif.rs  globe.rs  invert.rs  mod.rs  opacity.rs  rmbg.rs  speech.rs  spin.rs
akashi-api/src/utils/: http.rs
akashi-cache/: Cargo.toml
akashi-cache/src/: lib.rs
akashi-cache/src/caches/: mod.rs
akashi-commands/: Cargo.toml  README.md
akashi-commands/src/: lib.rs
akashi-commands/src/dev/: cflush.rs  mod.rs  servers.rs
akashi-commands/src/image/: caption.rs  convert.rs  globe.rs  invert.rs  mod.rs  opacity.rs  rembg.rs  speech.rs  spin.rs
akashi-commands/src/util/: help.rs  mod.rs  ping.rs  stats.rs
akashi-common/: Cargo.toml  README.md
akashi-common/src/: lib.rs
akashi-common/src/discord/: markdown.rs
akashi-common/src/framework/: akashi.rs  error.rs  events.rs  mod.rs
akashi-common/src/strings/: encode.rs
akashi-common/src/structs/: api.rs
akashi-common/src/utils/: commands.rs
akashi-core/: Cargo.toml  README.md
akashi-core/src/: main.rs
akashi-img/: Cargo.toml
akashi-img/src/: lib.rs
