[package]
name = "akashi-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
serde_json = "1.0.120"
ril = { git = "https://github.com/nekowinston/ril", branch = "feat/image_webp", features = ["all"] }
futures-util = "0.3.30"
sysinfo = { workspace = true }
async-trait = "0.1.81"
anyhow = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
akashi-common = { path = "../akashi-common" }

[features]
default = ["full-resources"]
full-resources = ["rmbg", "globe", "spin"]
rmbg = []
globe = []
spin = []